--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "ReactJS app",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build --prefix frontend",
+    "start": "start-server -s ./frontend/build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd frontend && npm ci"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hexlet/chat-server": "^1.1.8"
+    "@hexlet/chat-server": "^1.1.8",
+    "@rollbar/react": "^0.11.2",
+    "rollbar": "^2.26.2",
+    "socket.io-client": "^4.7.1"
   }
 }
