--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@rollbar/react": "^0.11.2",
     "rollbar": "^2.26.2",
     "socket.io-client": "^4.7.1"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
